Update favicon path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Weather at Penrod</title>
     <link rel="stylesheet" type="text/css" href="./assets/styles/salesforce-lightning-design-system.css" />
     <script src="./bundle.js"></script>
-    <link rel='icon' href='stylesheets/assets/images/favicon.png' type='image/x-icon'/ >
+    <link rel='icon' href='/assets/images/favicon.png' type='image/x-icon'/ >
 </head>
 <body>
     <div id="root"></div>
